<resources>
    <string name="app_name">Lab2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="previous">Previous</string>
    <string name="database">View feed</string>
    <string name="next">Next</string>
    <string name="searchagain">View search</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
</resources>
